--- a/browser_extension/src/popup.css
+++ b/browser_extension/src/popup.css
@@ -9,15 +9,18 @@ body {
   --color-text: 46, 46, 46;
   --color-primary: 239, 64, 86;
   
-  display: flex;
-  flex-direction: column;
-  gap: 18px;
   width: 350px;
   padding: 10px;
   /* border: 1px solid rgb(var(--color-primary)); */
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, sans-serif;
   background: rgb(var(--color-background));
   color: rgb(var(--color-text));
+}
+
+#root {
+  display: flex;
+  flex-direction: column;
+  gap: 18px;
 }
 
 .btn {
