--- a/browser_extension/src/popup.css
+++ b/browser_extension/src/popup.css
@@ -191,6 +191,41 @@ body {
   }
 }
 
+.tags-input-container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 42px;
+  border: 1px solid #dddddd;
+  border-radius: 6px;
+  box-sizing: border-box;
+
+  .tag-list {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 4px;
+    height: 40px;
+    margin-left: 9px;
+
+    .tag {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      height: 22px;
+      padding: 0 8px;
+      font-size: 14px;
+      line-height: 14px;
+      border-radius: 6px;
+    }
+  }
+
+  input {
+    border: none;
+  }
+}
+
 .status {
   position: absolute;
   top: 48px;
