--- a/webapp/src/pages/ResetPassword.css
+++ b/webapp/src/pages/ResetPassword.css
@@ -168,12 +168,8 @@
         justify-content: center;
         margin: 0 auto var(--space-md);
         border-radius: 50%;
-
-        svg {
-            width: 36px;
-            height: 36px;
-            color: white;
-        }
+        font-size: 2.25rem;
+        color: white;
     }
 
     .success-icon {
